# Knowledge_Graph_Class

./: .env.example  .gitignore  README.md  SUBMISSION.md  docker-compose.yml
KnowledgeGraphClass/: README.md
KnowledgeGraphClass/TP2/: docker-compose.yml
KnowledgeGraphClass/TP2/app/: etl.py  queries.cypher  start.sh
KnowledgeGraphClass/TP2/scripts/: check_containers.sh
KnowledgeGraphClass/TP3/: README.md  docker-compose.yml
KnowledgeGraphClass/TP3/app/: Dockerfile  pyproject.toml  start.sh
KnowledgeGraphClass/TP3/neo4j/import/: followers.csv  tweets.csv
KnowledgeGraphClass/TP3/scripts/: check_containers.sh
KnowledgeGraphClass/TP4/: README.md  docker-compose.yml
KnowledgeGraphClass/TP4/app/: pyproject.toml  twitch_graph_ml.ipynb
KnowledgeGraphClass/TP4/app/.ipynb_checkpoints/: twitch_graph_ml-checkpoint.ipynb
KnowledgeGraphClass/TP4/scripts/: check_containers.sh
KnowledgeGraphClass/TP5/: .env.example  .gitignore  README.md  docker-compose.yml
KnowledgeGraphClass/TP5/app/: Dockerfile  knowledge_graph_rag.ipynb  load_data.py  pyproject.toml
KnowledgeGraphClass/TP5/media/: .gitkeep  knowledge_graph.html
KnowledgeGraphClass/TP5/scripts/: check_containers.sh
NLPCLass/: README.md
NLPCLass/TP1/: README.md
NLPCLass/TP2/: Introduction_maths_optimisation.ipynb  README.md  pyproject.toml
NLPCLass/TP3/: README.md  main.ipynb  pyproject.toml
NLPCLass/TP4/: README.md  main.ipynb  pyproject.toml
NLPCLass/TP5/: README.md  pyproject.toml
NLPCLass/TP6/: README.md  evaluation_results.json  main_colab_final.ipynb  pyproject.toml
TP2/app/: main.py
TP2/neo4j/data/: server_id
TP2/neo4j/data/databases/neo4j/: neostore  neostore.counts.db  neostore.indexstats.db  neostore.labeltokenstore.db.names  neostore.nodestore.db  neostore.nodestore.db.id  neostore.propertystore.db  neostore.propertystore.db.id  neostore.propertystore.db.index.id  neostore.propertystore.db.index.keys  neostore.propertystore.db.index.keys.id  neostore.relationshipgroupstore.degrees.db  neostore.relationshipstore.db  neostore.relationshipstore.db.id  neostore.relationshiptypestore.db.names.id  neostore.schemastore.db  neostore.schemastore.db.id
TP2/neo4j/data/dbms/: auth.ini
TP3/: .env.example  .gitignore
TP3/app/: etl.py  main.py  queries.cypher
TP3/neo4j/import/: tweet_relationships.csv  users.csv
TP4/: .env.example
TP4/app/: Dockerfile  load_data.py
app/: etl.py  main.py  pyproject.toml  queries.cypher  start.sh
(+37 files in other folders)
