[project]
name = "tp3-twitter-network-analysis"
version = "1.0.0"
description = "Neo4j Twitter Network Analysis - TP3"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "neo4j>=5.14.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
