[project]
name = "tp4-graph-ml"
version = "0.1.0"
description = "Graph ML for Twitch Stream Language Prediction"
requires-python = ">=3.11"
dependencies = [
    # Neo4j connectivity
    "neo4j>=5.20.0",

    # Data manipulation
    "pandas>=2.1.0",
    "numpy>=1.24.0",

    # Machine Learning
    "scikit-learn>=1.3.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Jupyter
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
